--- a/app/templates/pages/categories.html
+++ b/app/templates/pages/categories.html
@@ -31,6 +31,22 @@
                   {{ DatePost(posts.pages[0].header.addedAt) }}</i></time>
             </div>
           </a>
+          <div class="ads-pc">
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <ins class="adsbygoogle" style="display:block" data-ad-format="fluid" data-ad-layout-key="-fb+5v+4k-d3+7b"
+              data-ad-client="ca-pub-1284323428666859" data-ad-slot="3556740125"></ins>
+            <script>
+              (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+          </div>
+          <div class="ads-mobile">
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <ins class="adsbygoogle" style="display:block" data-ad-format="fluid" data-ad-layout-key="-fb+5v+4k-d3+7b"
+              data-ad-client="ca-pub-1284323428666859" data-ad-slot="6148256205"></ins>
+            <script>
+              (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+          </div>
           {% for post in posts.pages[0].notices %}
           <a class="rest-art" href="{{ url_for('notice', id=post.id) }}">
             <div class="rest-pic">
