--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -9,6 +9,10 @@
   flex-direction: column;
 }
 
+.ads-mobile {
+  display: none;
+}
+
 .home .page .header-art {
   user-select: none;
   position: relative;
@@ -234,5 +238,11 @@
   }
   .home .page .ad-h1 {
     width: 75%;
+  }
+  .ads-pc {
+    display: none;
+  }
+  .ads-mobile {
+    display: block;
   }
 }
