--- a/app/static/css/notice.css
+++ b/app/static/css/notice.css
@@ -281,7 +281,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  box-shadow: inset 0 -100px 30px -20px rgba(16,16,16,.8);
+  box-shadow: inset 0 -100px 30px -20px rgba(16, 16, 16, .8);
 }
 
 .notices-in-more .news-container-link .news-container .title {
@@ -292,7 +292,7 @@
   left: 0;
   color: #EAEAEA;
   padding: 0 10px;
-  text-shadow: 1px 1px 1px rgba(16,16,16,.8);
+  text-shadow: 1px 1px 1px rgba(16, 16, 16, .8);
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
@@ -321,7 +321,6 @@
   width: 60%;
   margin: 20px auto;
 }
-
 
 @media (max-width: 1025px) {
   .web .payload .notice {
