--- a/app/templates/components/head.html
+++ b/app/templates/components/head.html
@@ -22,8 +22,10 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/sub-header.css') }}">
 <script src="https://kit.fontawesome.com/ed0f511ec4.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script data-ad-client="ca-pub-1284323428666859" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><script>
-    const pageUrl = location.href;
-    const pageUrlTag = document.querySelector('.page-url');
-    pageUrlTag.content = pageUrl;
+<script data-ad-client="ca-pub-1284323428666859" async
+  src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  const pageUrl = location.href;
+  const pageUrlTag = document.querySelector('.page-url');
+  pageUrlTag.content = pageUrl;
 </script>
