--- a/app/templates/pages/posts/posts.html
+++ b/app/templates/pages/posts/posts.html
@@ -14,8 +14,8 @@
       <div class="sub_header">
         {% include 'components/sub_header.html' %}
       </div>
-      {% if selected == 'posts' %} {% include 'posts/my_posts.html' %} {% elif selected == 'new' %}
-      {% include 'posts/new_post.html' %} {% endif %}
+      {% if selected == 'posts' %} {% include 'pages/posts/my_posts.html' %} {% elif selected == 'new' %}
+      {% include 'pages/posts/new_post.html' %} {% endif %}
     </div>
     {% include 'components/footer.html' %}
   </div>
