--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -154,7 +154,7 @@
           <a href="{{ url_for('index') }}" class="header-1part-1opc">Principais notícias</a>
         </li>
         <li>
-          <a href="{{ url_for('gaming_news') }}" class="header-1part-1opc">Gaming News</a>
+          <a href="{{ url_for('gaming_news') }}" class="header-1part-1opc">Notícias sobre games</a>
         </li>
         <li>
           <a href="{{ url_for('e_sports') }}" class="header-1part-1opc">e-Sports</a>
