--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -151,13 +151,13 @@
     <nav>
       <ul class="header-items">
         <li>
-          <a href="{{ url_for('index') }}" class="header-1part-1opc">Principais notícias</a>
-        </li>
-        <li>
           <a href="{{ url_for('gaming_news') }}" class="header-1part-1opc">Notícias sobre games</a>
         </li>
         <li>
           <a href="{{ url_for('e_sports') }}" class="header-1part-1opc">e-Sports</a>
+        </li>
+        <li>
+          <a href="{{ url_for('strategy_guide') }}" class="header-1part-1opc">Guias de estratégia</a>
         </li>
         <li>
           <a href="{{ url_for('trailer') }}" class="header-1part-1opc">Trailers</a>
