--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
     <div class="payload">
       <div class="home">
         <div class="page">
-          <a href="{{ url_for('notice', id=posts.pages[0].header.id) }}" class="header-art">
+          <a href="{{ url_for('notice', q=posts.pages[0].header.id) }}" class="header-art">
             <div class="category">{{ posts.pages[0].header.category.name }}</div>
             <h3 class="header-title">{{ posts.pages[0].header.title }}</h3>
             <div class="header-pic">
@@ -56,7 +56,7 @@
             };
           </script>
           {% endif %}
-          <a class="rest-art" href="{{ url_for('notice', id=post.id) }}">
+          <a class="rest-art" href="{{ url_for('notice', q=post.id) }}">
             <div class="rest-pic">
               <img src="{{ post.cover_image }}" alt="{{ post.title }}">
             </div>
