--- a/app/templates/pages/notice.html
+++ b/app/templates/pages/notice.html
@@ -135,7 +135,7 @@
         <span class="more-notices-title">Mais notícias</span>
         <div class="notices-in-more">
           {% for news in more_news %}
-          <a href="{{ url_for('notice', id=news.id) }}" class="news-container-link">
+          <a href="{{ url_for('notice', q=news.id) }}" class="news-container-link">
             <div class="news-container">
               <div class="cover_image">
                 <img src="{{ news.cover_image }}" alt="{{ news.title }}">
