Add page of all articles

--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -129,6 +129,9 @@
     <nav>
       <ul class="header-items">
         <li>
+          <a href="{{ url_for('all_articles') }}" class="header-1part-1opc">Todas as notícias</a>
+        </li>
+        <li>
           <a href="{{ url_for('gaming_news') }}" class="header-1part-1opc">Notícias sobre games</a>
         </li>
         <li>
