--- a/app/static/css/notice.css
+++ b/app/static/css/notice.css
@@ -389,8 +389,6 @@
     display: none;
   }
   .adsInNotice {
-    display: block;
-    margin: 0 auto 20px auto;
-    width: 70%;
+    margin: 20px;
   }
 }
