--- a/app/static/css/header.css
+++ b/app/static/css/header.css
@@ -7,6 +7,10 @@
   width: 100%;
   border-bottom: 2px solid #1a1a1a;
   user-select: none;
+  position: fixed;
+  z-index: 5;
+  top: 0;
+  left: 0;
 }
 
 .header #options1 {
