Remove the more notices

--- a/app/templates/pages/notice.html
+++ b/app/templates/pages/notice.html
@@ -133,7 +133,7 @@
           </script>
         </div>
         <span class="more-notices-title">Mais notícias</span>
-        <div class="notices-in-more">
+        <!-- <div class="notices-in-more">
           {% for news in more_news %}
           <a href="{{ url_for('notice', q=news.id) }}" class="news-container-link">
             <div class="news-container">
@@ -146,7 +146,7 @@
             </div>
           </a>
           {% endfor %}
-        </div>
+        </div> -->
       </div>
       {% endif %}
     </div>
